--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 						<h1 class="text-uppercase ls-1 mb-3 animated slideInDown">Find Balance<br>
 							<span class="fw-bold">Through Yoga</span>
 						</h1>
-						<p class="text-justify text-last-center lh-1-75 p-2 mb-md-4 animated zoomIn">
+						<p class="text-left lh-1-75 p-2 mb-md-4 animated zoomIn">
 							Achieve harmony and inner peace by integrating yoga into your daily routine. 
 						</p>
 						<div class="d-flex flex-row"> <!-- Wrapper to keep buttons side by side -->
@@ -130,7 +130,7 @@
 					<div class="overlay"></div>
 					<div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
 						<h1 class="text-uppercase ls-1 mb-3 animated slideInDown">Find Peace<br><span class="fw-bold">Through Yoga</span></h1>
-						<p class="text-justify text-last-center lh-1-75 p-2 mb-md-4 animated zoomIn">
+						<p class="text-left lh-1-75 p-2 mb-md-4 animated zoomIn">
 							Experience the calming power of yoga and bring serenity to your mind.
 						</p>
 						<div class="d-flex flex-row"> <!-- Wrapper to keep buttons side by side -->
@@ -175,112 +175,112 @@
 			</div>
 		</div>
 
-<!-- Features Section -->
-<div class="container-fluid py-5 features">
-    <div class="container py-5 position-relative">
-        <div class="section-title text-center position-relative pb-3 mb-5 mx-auto" style="max-width: 600px;">
-            <h5 class="fw-bold text-theme text-uppercase">Why Choose Us</h5>
-            <h1 class="mb-0">Our Yoga Programs</h1>
-        </div>
-        <div class="row g-5 align-items-center position-relative">
-            <div class="col-lg-4">
-                <div class="feature-item d-flex justify-content-end align-items-center mb-5">
-                    <div class="content text-right me-3">
-                        <h5>Vinyasa Yoga</h5>
-                        <p>Dolor reellendus temorius maiores alia</p>
-                    </div>
-                    <div class="feature-icon hover-zoom">
-                        <div class="circle-icon">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                    </div>
-                </div>
-                <div class="feature-item d-flex justify-content-end align-items-center mb-5" style="margin-right: 50px;">
-                    <div class="content text-right me-3">
-                        <h5>Slow Yoga</h5>
-                        <p>Rabore et dolore maga eiusmo rute aliua</p>
-                    </div>
-                    <div class="feature-icon hover-zoom">
-                        <div class="circle-icon">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                    </div>
-                </div>
-                <div class="feature-item d-flex justify-content-end align-items-center mb-5" style="margin-right: 40px;">
-                    <div class="content text-right me-3">
-                        <h5>Intuitive Yoga</h5>
-                        <p>Earum rerum hic tene sapiente delectus</p>
-                    </div>
-                    <div class="feature-icon hover-zoom">
-                        <div class="circle-icon">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                    </div>
-                </div>
-                <div class="feature-item d-flex justify-content-end align-items-center">
-                    <div class="content text-right me-3">
-                        <h5>Aroma Yoga</h5>
-                        <p>Neque orro quisquam est raui dolorem</p>
-                    </div>
-                    <div class="feature-icon hover-zoom">
-                        <div class="circle-icon">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 text-center position-relative">
-                <img src="images/about.jpg" alt="Yoga Center" class="img-fluid center-image">
-            </div>
-            <div class="col-lg-4">
-                <div class="feature-item d-flex align-items-center mb-5">
-                    <div class="feature-icon hover-zoom">
-                        <div class="circle-icon">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                    </div>
-                    <div class="content ms-3">
-                        <h5>Kundalini Yoga</h5>
-                        <p>Dolor reellendus temorius maiores alia</p>
-                    </div>
-                </div>
-                <div class="feature-item d-flex align-items-center mb-5" style="margin-left: 50px;">
-                    <div class="feature-icon hover-zoom">
-                        <div class="circle-icon">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                    </div>
-                    <div class="content ms-3">
-                        <h5>Bikram Yoga</h5>
-                        <p>Rabore et dolore mae eiusmo rute aliua</p>
-                    </div>
-                </div>
-                <div class="feature-item d-flex align-items-center mb-5" style="margin-left: 40px;">
-                    <div class="feature-icon hover-zoom">
-                        <div class="circle-icon">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                    </div>
-                    <div class="content ms-3">
-                        <h5>Mindfulness Training</h5>
-                        <p>Earum rerum hic tene sapiente delectus</p>
-                    </div>
-                </div>
-                <div class="feature-item d-flex align-items-center">
-                    <div class="feature-icon hover-zoom">
-                        <div class="circle-icon">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                    </div>
-                    <div class="content ms-3">
-                        <h5>Workout Routines</h5>
-                        <p>Neque orro quisquam est raui dolorem</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+		<!-- Features Section -->
+		<div class="container-fluid py-5 features">
+			<div class="container py-5 position-relative">
+				<div class="section-title text-center position-relative pb-3 mb-5 mx-auto" style="max-width: 600px;">
+					<h5 class="fw-bold text-theme text-uppercase">Why Choose Us</h5>
+					<h1 class="mb-0">Our Yoga Programs</h1>
+				</div>
+				<div class="row g-5 align-items-center position-relative">
+					<div class="col-lg-4">
+						<div class="feature-item d-flex justify-content-end align-items-center mb-5">
+							<div class="content text-right me-3">
+								<h5>Vinyasa Yoga</h5>
+								<p>Dolor reellendus temorius maiores alia</p>
+							</div>
+							<div class="feature-icon hover-zoom">
+								<div class="circle-icon">
+									<i class="fas fa-check-circle"></i>
+								</div>
+							</div>
+						</div>
+						<div class="feature-item d-flex justify-content-end align-items-center mb-5" style="margin-right: 50px;">
+							<div class="content text-right me-3">
+								<h5>Slow Yoga</h5>
+								<p>Rabore et dolore maga eiusmo rute aliua</p>
+							</div>
+							<div class="feature-icon hover-zoom">
+								<div class="circle-icon">
+									<i class="fas fa-check-circle"></i>
+								</div>
+							</div>
+						</div>
+						<div class="feature-item d-flex justify-content-end align-items-center mb-5" style="margin-right: 40px;">
+							<div class="content text-right me-3">
+								<h5>Intuitive Yoga</h5>
+								<p>Earum rerum hic tene sapiente delectus</p>
+							</div>
+							<div class="feature-icon hover-zoom">
+								<div class="circle-icon">
+									<i class="fas fa-check-circle"></i>
+								</div>
+							</div>
+						</div>
+						<div class="feature-item d-flex justify-content-end align-items-center">
+							<div class="content text-right me-3">
+								<h5>Aroma Yoga</h5>
+								<p>Neque orro quisquam est raui dolorem</p>
+							</div>
+							<div class="feature-icon hover-zoom">
+								<div class="circle-icon">
+									<i class="fas fa-check-circle"></i>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 text-center position-relative">
+						<img src="images/about.jpg" alt="Yoga Center" class="img-fluid center-image">
+					</div>
+					<div class="col-lg-4">
+						<div class="feature-item d-flex align-items-center mb-5">
+							<div class="feature-icon hover-zoom">
+								<div class="circle-icon">
+									<i class="fas fa-check-circle"></i>
+								</div>
+							</div>
+							<div class="content ms-3">
+								<h5>Kundalini Yoga</h5>
+								<p>Dolor reellendus temorius maiores alia</p>
+							</div>
+						</div>
+						<div class="feature-item d-flex align-items-center mb-5" style="margin-left: 50px;">
+							<div class="feature-icon hover-zoom">
+								<div class="circle-icon">
+									<i class="fas fa-check-circle"></i>
+								</div>
+							</div>
+							<div class="content ms-3">
+								<h5>Bikram Yoga</h5>
+								<p>Rabore et dolore mae eiusmo rute aliua</p>
+							</div>
+						</div>
+						<div class="feature-item d-flex align-items-center mb-5" style="margin-left: 40px;">
+							<div class="feature-icon hover-zoom">
+								<div class="circle-icon">
+									<i class="fas fa-check-circle"></i>
+								</div>
+							</div>
+							<div class="content ms-3">
+								<h5>Mindfulness Training</h5>
+								<p>Earum rerum hic tene sapiente delectus</p>
+							</div>
+						</div>
+						<div class="feature-item d-flex align-items-center">
+							<div class="feature-icon hover-zoom">
+								<div class="circle-icon">
+									<i class="fas fa-check-circle"></i>
+								</div>
+							</div>
+							<div class="content ms-3">
+								<h5>Workout Routines</h5>
+								<p>Neque orro quisquam est raui dolorem</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 
 
 
