--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 						<h1 class="text-uppercase ls-1 mb-3 animated slideInDown">Find Balance<br>
 							<span class="fw-bold">Through Yoga</span>
 						</h1>
-						<p class="text-left lh-1-75 p-2 mb-md-4 animated zoomIn">
+						<p class="text-justify lh-1-75 p-2 mb-md-4 animated zoomIn">
 							Achieve harmony and inner peace by integrating yoga into your daily routine. 
 						</p>
 						<div class="d-flex flex-row"> <!-- Wrapper to keep buttons side by side -->
@@ -130,7 +130,7 @@
 					<div class="overlay"></div>
 					<div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
 						<h1 class="text-uppercase ls-1 mb-3 animated slideInDown">Find Peace<br><span class="fw-bold">Through Yoga</span></h1>
-						<p class="text-left lh-1-75 p-2 mb-md-4 animated zoomIn">
+						<p class="text-justify lh-1-75 p-2 mb-md-4 animated zoomIn">
 							Experience the calming power of yoga and bring serenity to your mind.
 						</p>
 						<div class="d-flex flex-row"> <!-- Wrapper to keep buttons side by side -->
