--- a/index.html
+++ b/index.html
@@ -100,8 +100,9 @@
 						</div>
 						<a href="gallery.html" class="nav-item nav-link">Gallery</a>
 						<a href="contact.html" class="nav-item nav-link">Contact Us</a>
-
 					</div>
+					<!-- Register Now Button -->
+					<a href="register.html" class="btn hover-fill btn-theme theme-design py-md-3 px-md-5 ms-auto">Register Now</a>
 				</div>
 			</nav>
 		</header>
@@ -112,7 +113,7 @@
 				<div class="carousel-item active">
 					<img class="w-100" src="images/carousel-1.jpg" alt="Image">
 					<div class="overlay"></div>
-					<div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
+					<div class="carousel-caption d-flex flex-column justify-content-center align-items-start"> <!-- Updated alignment classes -->
 						<h1 class="text-uppercase ls-1 mb-3 animated slideInDown">Find Balance<br>
 							<span class="fw-bold">Through Yoga</span>
 						</h1>
@@ -120,7 +121,7 @@
 							Achieve harmony and inner peace by integrating yoga into your daily routine. 
 						</p>
 						<div class="d-flex flex-row"> <!-- Wrapper to keep buttons side by side -->
-							<a href="about.html" class="btn hover-fill btn-theme theme-design py-md-3 px-md-5 me-3 animated slideInLeft">Read More</a>
+							<a href="about.html" class="btn hover-fill btn-outline-light theme-design py-md-3 px-md-5 me-3 animated slideInLeft">Read More</a>
 							<a href="contact.html" class="btn hover-fill theme-design btn-outline-light py-md-3 px-md-5 animated slideInRight">Contact Us</a>
 						</div>
 					</div>
@@ -128,13 +129,13 @@
 				<div class="carousel-item">
 					<img class="w-100" src="images/carousel-2.jpg" alt="Image">
 					<div class="overlay"></div>
-					<div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
+					<div class="carousel-caption d-flex flex-column justify-content-center align-items-start"> <!-- Updated alignment classes -->
 						<h1 class="text-uppercase ls-1 mb-3 animated slideInDown">Find Peace<br><span class="fw-bold">Through Yoga</span></h1>
 						<p class="text-justify lh-1-75 p-2 mb-md-4 animated zoomIn">
 							Experience the calming power of yoga and bring serenity to your mind.
 						</p>
 						<div class="d-flex flex-row"> <!-- Wrapper to keep buttons side by side -->
-							<a href="about.html" class="btn hover-fill btn-theme theme-design py-md-3 px-md-5 me-3 animated slideInLeft">Read More</a>
+							<a href="about.html" class="btn hover-fill btn-outline-light theme-design py-md-3 px-md-5 me-3 animated slideInLeft">Read More</a>
 							<a href="contact.html" class="btn hover-fill theme-design btn-outline-light py-md-3 px-md-5 animated slideInRight">Contact Us</a>
 						</div>
 					</div>
