--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 						</div>
 					</div>
 					<div class="col-lg-4 text-center position-relative">
-						<img src="images/about.jpg" alt="Yoga Center" class="img-fluid center-image wow fadeIn" data-wow-delay="0.3s">
+						<img src="images/feature.jpg" alt="Yoga Center" class="img-fluid center-image wow fadeIn" data-wow-delay="0.3s">
 					</div>
 					<div class="col-lg-4">
 						<div class="feature-item d-flex align-items-center mb-5 wow slideInRight" data-wow-delay="0.1s">
