--- a/index.html
+++ b/index.html
@@ -283,6 +283,57 @@
 			</div>
 		</div>
 
+		<!-- Gallery Section -->
+		<div class="container-fluid py-5 mb-5 py-5 gallery wow fadeInUp" data-wow-delay="0.1s">
+			<div class="py-5">
+				<div class="section-title text-center position-relative pb-3 mb-5 mx-auto" style="max-width: 600px;">
+					<h5 class="fw-bold text-theme text-uppercase">Gallery</h5>
+					<h1 class="mb-0">Yoga Moments and Inspirations</h1>
+				</div>
+				<div class="row">
+					<div class="col-lg-12">
+						<ul class="cs-hidden" id="autoWidth">
+							<li>
+								<div class="box">
+									<img class="slide-img" src="images/gallery-1.jpg" alt="">
+								</div>
+							</li>
+
+							<li>
+								<div class="box">
+									<img class="slide-img" src="images/gallery-2.jpg" alt="">
+								</div>
+							</li>
+
+							<li>
+								<div class="box">
+									<img class="slide-img" src="images/gallery-3.jpg" alt="">
+								</div>
+							</li>
+
+							<li>
+								<div class="box">
+									<img class="slide-img" src="images/gallery-4.jpg" alt="">
+								</div>
+							</li>
+
+							<li>
+								<div class="box">
+									<img class="slide-img" src="images/gallery-5.jpg" alt="">
+								</div>
+							</li>
+
+							<li>
+								<div class="box">
+									<img class="slide-img" src="images/gallery-6.jpg" alt="">
+								</div>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+
 		<!-- Testimonial Section -->
 		<div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
 			<div class="container py-5">
@@ -588,57 +639,7 @@
 		</div>
 		-->
 
-		<!-- Gallery Section 
-		<div class="container-fluid py-5 mb-5 py-5 gallery wow fadeInUp" data-wow-delay="0.1s">
-			<div class="py-5">
-				<div class="section-title text-center position-relative pb-3 mb-5 mx-auto" style="max-width: 600px;">
-					<h5 class="fw-bold text-theme text-uppercase">Gallery</h5>
-					<h1 class="mb-0">Explore Our Latest Gallery Collections Inside</h1>
-				</div>
-				<div class="row">
-					<div class="col-lg-12">
-						<ul class="cs-hidden" id="autoWidth">
-							<li>
-								<div class="box">
-									<img class="slide-img" src="images/team-1.jpg" alt="">
-								</div>
-							</li>
 
-							<li>
-								<div class="box">
-									<img class="slide-img" src="images/team-2.jpg" alt="">
-								</div>
-							</li>
-
-							<li>
-								<div class="box">
-									<img class="slide-img" src="images/team-3.jpg" alt="">
-								</div>
-							</li>
-
-							<li>
-								<div class="box">
-									<img class="slide-img" src="images/team-1.jpg" alt="">
-								</div>
-							</li>
-
-							<li>
-								<div class="box">
-									<img class="slide-img" src="images/team-2.jpg" alt="">
-								</div>
-							</li>
-
-							<li>
-								<div class="box">
-									<img class="slide-img" src="images/team-3.jpg" alt="">
-								</div>
-							</li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</div>
-		-->
 
 
 	
