--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 			<!-- Navbar Section -->
 			<nav class="navbar navbar-expand-lg navbar-dark px-4 py-3 py-lg-0">
 				<a href="/" class="navbar-brand p-0">
-					<img src='images/logo.png' alt="Logo" rel="preload" class="navbar-brand-image" />
+					<img src='images/logo.jpeg' alt="Logo" rel="preload" class="navbar-brand-image" />
 				</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
 					<span class="fa fa-bars"></span>
@@ -710,12 +710,12 @@
 		-->
 
 		<!-- Footer Section -->
-		<footer class="bg-theme text-white pt-5 pb-4">
+		<footer class="bg-dark text-white pt-5 pb-4">
 			<div class="container text-center text-md-left">
 				<div class="row text-center text-md-left">
 					<!-- Logo and About -->
 					<div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-						<img src="images/logo.png" alt="Yoga">
+						<img src="images/logo.jpeg" alt="Yoga">
 						<h5 class="text-uppercase mb-4 font-weight-bold">Yoga</h5>
 						<p>Experience the serenity and balance of yoga with us. Discover a journey that brings inner peace and holistic wellness.</p>
 						<div class="d-flex justify-content-center">
