--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 					<span class="fa fa-bars"></span>
 				</button>
 				<div class="collapse navbar-collapse" id="navbarCollapse">
-					<div class="navbar-nav mx-auto py-0">
+					<div class="navbar-nav ms-auto py-0">
 						<a href="/" class="nav-item nav-link active">Home</a>
 						<a href="about.html" class="nav-item nav-link">About Us</a>
 						<div class="nav-item dropdown">
