--- a/index.html
+++ b/index.html
@@ -719,10 +719,8 @@
 						<h5 class="text-uppercase mb-4 font-weight-bold">Yoga</h5>
 						<p>Experience the serenity and balance of yoga with us. Discover a journey that brings inner peace and holistic wellness.</p>
 						<div class="d-flex justify-content-center">
-							<a class="btn hover-fill btn-theme btn-square me-2" href="#"><i class="fab fa-twitter fw-normal"></i></a>
-									<a class="btn hover-fill btn-theme btn-square me-2" href="#"><i class="fab fa-facebook-f fw-normal"></i></a>
-									<a class="btn hover-fill btn-theme btn-square me-2" href="#"><i class="fab fa-linkedin-in fw-normal"></i></a>
-									<a class="btn hover-fill btn-theme btn-square" href="#"><i class="fab fa-instagram fw-normal"></i></a>
+							<a class="btn hover-fill btn-theme btn-square me-2" href="https://www.instagram.com/himalayasyogaretreat/"><i class="fab fa-instagram fw-normal"></i></a>
+							<a class="btn hover-fill btn-theme btn-square" href="https://www.threads.net/@himalayasyogaretreat/"><i class="fas fa-comments fw-normal"></i></a>
 						</div>
 					</div>
 					<!-- Quick Links -->
@@ -738,8 +736,8 @@
 					<div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
 						<h5 class="text-uppercase mb-4 font-weight-bold">Contact Info</h5>
 						<p><i class="fas fa-map-marker-alt me-3"></i><a class="text-light mb-0" href="https://www.google.com/maps/place/India">123 Street, India</a></p>
-						<p><i class="fas fa-envelope me-3"></i><a class="text-light mb-0" href="mailto:info@example.com">info@example.com</a></p>
-						<p><i class="fas fa-phone me-3"></i><a class="text-light mb-0" href="tel:+12345678">+12345678</a></p>
+						<p><i class="fas fa-envelope me-3"></i><a class="text-light mb-0" href="mailto:yogaretreatinhimalaya@gmail.com">yogaretreatinhimalaya@gmail.com</a></p>
+						<p><i class="fas fa-phone me-3"></i><a class="text-light mb-0" href="tel:+919084359144">+919084359144</a></p>
 					</div>
 				</div>
 
