--- a/index.html
+++ b/index.html
@@ -98,7 +98,6 @@
 								<a href="#" class="dropdown-item">Haridhwar</a>
 							</div>
 						</div>
-						<a href="gallery.html" class="nav-item nav-link">Gallery</a>
 						<a href="contact.html" class="nav-item nav-link">Contact Us</a>
 					</div>
 					<!-- Register Now Button -->
@@ -111,7 +110,7 @@
 		<div id="header-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-pause="false" data-bs-interval="4000">
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img class="w-100" src="images/carousel-1.jpg" alt="Image">
+					<img class="w-100" src="images/yogahall3.jpg" alt="Image">
 					<div class="overlay"></div>
 					<div class="carousel-caption d-flex flex-column justify-content-center align-items-start"> <!-- Updated alignment classes -->
 						<h1 class="text-uppercase ls-1 mb-3 animated slideInDown">Find Balance<br>
@@ -127,7 +126,7 @@
 					</div>
 				</div>
 				<div class="carousel-item">
-					<img class="w-100" src="images/carousel-2.jpg" alt="Image">
+					<img class="w-100" src="images/yogahall2-2.jpg" alt="Image">
 					<div class="overlay"></div>
 					<div class="carousel-caption d-flex flex-column justify-content-center align-items-start"> <!-- Updated alignment classes -->
 						<h1 class="text-uppercase ls-1 mb-3 animated slideInDown">Find Peace<br><span class="fw-bold">Through Yoga</span></h1>
@@ -231,7 +230,7 @@
 						</div>
 					</div>
 					<div class="col-lg-4 text-center position-relative">
-						<img src="images/feature.jpg" alt="Yoga Center" class="img-fluid center-image wow fadeIn" data-wow-delay="0.3s">
+						<img src="images/yogahall3.jpg" alt="Yoga Center" class="img-fluid center-image wow fadeIn" data-wow-delay="0.3s">
 					</div>
 					<div class="col-lg-4">
 						<div class="feature-item d-flex align-items-center mb-5 wow slideInRight" data-wow-delay="0.1s">
@@ -295,37 +294,43 @@
 						<ul class="cs-hidden" id="autoWidth">
 							<li>
 								<div class="box">
-									<img class="slide-img" src="images/gallery-1.jpg" alt="">
+									<img class="slide-img" src="images/yogahall2-2.jpg" alt="">
+								</div>
+							</li>
+							
+							<li>
+								<div class="box">
+									<img class="slide-img" src="images/Private room.jpg" alt="">
 								</div>
 							</li>
 
 							<li>
 								<div class="box">
-									<img class="slide-img" src="images/gallery-2.jpg" alt="">
+									<img class="slide-img" src="images/sharedroom1.jpg" alt="">
+								</div>
+							</li>
+							
+							<li>
+								<div class="box">
+									<img class="slide-img" src="images/yogahall3.jpg" alt="">
 								</div>
 							</li>
 
 							<li>
 								<div class="box">
-									<img class="slide-img" src="images/gallery-3.jpg" alt="">
+									<img class="slide-img" src="images/sharedroom2.jpg" alt="">
 								</div>
 							</li>
 
 							<li>
 								<div class="box">
-									<img class="slide-img" src="images/gallery-4.jpg" alt="">
+									<img class="slide-img" src="images/reception area.jpg" alt="">
 								</div>
 							</li>
 
 							<li>
 								<div class="box">
-									<img class="slide-img" src="images/gallery-5.jpg" alt="">
-								</div>
-							</li>
-
-							<li>
-								<div class="box">
-									<img class="slide-img" src="images/gallery-6.jpg" alt="">
+									<img class="slide-img" src="images/dinning area.jpg" alt="">
 								</div>
 							</li>
 						</ul>
@@ -708,9 +713,9 @@
 			</div>
 		</div>
 		-->
-
 		<!-- Footer Section -->
-		<footer class="bg-dark text-white pt-5 pb-4">
+		<hr>
+		<footer class="bg-white text-dark pt-5 pb-4">
 			<div class="container text-center text-md-left">
 				<div class="row text-center text-md-left">
 					<!-- Logo and About -->
@@ -726,27 +731,27 @@
 					<!-- Quick Links -->
 					<div class="link-animated col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
 						<h5 class="text-uppercase mb-4 font-weight-bold">Quick Links</h5>
-						<p><a href="#" class="text-light mb-0">Home</a></p>
-						<p><a href="#" class="text-light mb-0">About Us</a></p>
-						<p><a href="#" class="text-light mb-0">Services</a></p>
-						<p><a href="#" class="text-light mb-0">Team</a></p>
-						<p><a href="#" class="text-light mb-0">Contact Us</a></p>
+						<p><a href="#" class="text-dark mb-0">Home</a></p>
+						<p><a href="#" class="text-dark mb-0">About Us</a></p>
+						<p><a href="#" class="text-dark mb-0">Services</a></p>
+						<p><a href="#" class="text-dark mb-0">Team</a></p>
+						<p><a href="#" class="text-dark mb-0">Contact Us</a></p>
 					</div>
 					<!-- Contact Info -->
 					<div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
 						<h5 class="text-uppercase mb-4 font-weight-bold">Contact Info</h5>
-						<p><i class="fas fa-map-marker-alt me-3"></i><a class="text-light mb-0" href="https://www.google.com/maps/place/India">123 Street, India</a></p>
-						<p><i class="fas fa-envelope me-3"></i><a class="text-light mb-0" href="mailto:yogaretreatinhimalaya@gmail.com">yogaretreatinhimalaya@gmail.com</a></p>
-						<p><i class="fas fa-phone me-3"></i><a class="text-light mb-0" href="tel:+919084359144">+919084359144</a></p>
+						<p><i class="fas fa-map-marker-alt me-3"></i><a class="text-dark mb-0" href="https://www.google.com/maps/place/India">123 Street, India</a></p>
+						<p><i class="fas fa-envelope me-3"></i><a class="text-dark mb-0" href="mailto:yogaretreatinhimalaya@gmail.com">yogaretreatinhimalaya@gmail.com</a></p>
+						<p><i class="fas fa-phone me-3"></i><a class="text-dark mb-0" href="tel:+919084359144">+919084359144</a></p>
 					</div>
 				</div>
 
 				<!-- Footer Bottom -->
 				<div class="row align-items-center mt-3">
 					<div class="col-md-12 col-lg-12">
-						<p class="text-center text-white">
-							&copy; 2024 <a class="text-white border-bottom" href="/">Yoga</a>. All Rights Reserved.
-							Designed by <a class="text-white border-bottom" href="https://www.youtube.com/@iamsuraj_01">Jakhmola Web House</a>
+						<p class="text-center text-dark">
+							&copy; 2024 <a class="text-dark border-bottom" href="/">Yoga</a>. All Rights Reserved.
+							Designed by <a class="text-dark border-bottom" href="https://www.youtube.com/@iamsuraj_01">Jakhmola Web House</a>
 						</p>
 					</div>
 				</div>
