--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
 					<div class="col-lg-4 slideInUp" data-wow-delay="0.3s">
 						<div class="team-item bg-light theme-design-high overflow-hidden">
 							<div class="team-img hover-zoom position-relative overflow-hidden">
-								<img class="img-fluid w-100" src="images/team-1.jpg" alt="">
+								<img class="img-fluid w-100" src="images/team-(1).jpg" alt="">
 							</div>
 							<div class="text-center py-4">
 								<h4 class="text-theme">Full Name</h4>
