--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 					</div>
 				</div>
 				<div class="carousel-item">
-					<img class="w-100" src="images/yoga-5.jpeg" alt="Image">
+					<img class="w-100" src="images/yogahall2-2.jpg" alt="Image">
 					<div class="overlay"></div>
 					<div class="carousel-caption d-flex flex-column justify-content-center align-items-start"> <!-- Updated alignment classes -->
 						<h1 class="text-uppercase ls-1 mb-3 animated slideInDown">Find Peace<br><span class="fw-bold">Through Yoga</span></h1>
