--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 						<div class="about-image-wrapper position-relative">
 							<div class="background-shape theme-design"></div>
 							<div class="about-image theme-design">
-								<img src="images/about.jpg" alt="Yoga Practice" class="img-fluid">
+								<img src="images/about.jpeg" alt="Yoga Practice" class="img-fluid">
 							</div>
 						</div>
 					</div>
