--- a/index.html
+++ b/index.html
@@ -281,6 +281,79 @@
 			</div>
 		</div>
 
+<!-- Plan Section -->
+<div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
+    <div class="container py-5">
+        <div class="section-title text-center position-relative pb-3 mb-5 mx-auto" style="max-width: 600px;">
+            <h5 class="fw-bold text-theme text-uppercase">Himalayas Yoga Retreat</h5>
+            <h1 class="mb-0">We are Offering Various Retreat Options</h1>
+        </div>
+        <div class="row g-0">
+            <div class="col-lg-4 wow slideInUp" data-wow-delay="0.6s">
+                <div class="bg-light rounded">
+                    <div class="border-bottom py-4 px-5 mb-4">
+                        <h4 class="text-theme mb-1">Temple Visit</h4>
+                        <small class="text-uppercase">Explore Sacred Sites</small>
+                    </div>
+                    <div class="p-5 pt-0">
+                        <h1 class="display-5 mb-3">
+                            <small class="align-top" style="font-size: 22px; line-height: 45px;">$</small>299<small
+                                class="align-bottom" style="font-size: 16px; line-height: 40px;">/ Shared</small>
+                        </h1>
+                        <div class="d-flex justify-content-between mb-3"><span>Accommodation:</span><span>Twin Shared / Private</span></div>
+                        <div class="d-flex justify-content-between mb-3"><span>Activities:</span><span>Temple Visit, Hiking</span></div>
+						<div class="d-flex justify-content-between mb-3"><span>Offerings:</span><span>Daily 3 Times Meals & Tea<br>Airport Pickup & Drop Off</span></div>
+                        <div class="d-flex justify-content-between mb-2"><span>Duration:</span><span>5 Days, 4 Nights Retreat</span></div>
+                        <a href="#" class="btn hover-fill btn-theme py-2 px-4 mt-4">Contact Us</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 wow slideInUp" data-wow-delay="0.3s">
+                <div class="bg-white rounded shadow position-relative" style="z-index: 1;">
+                    <div class="border-bottom py-4 px-5 mb-4">
+                        <h4 class="text-theme mb-1">Yoga Sessions</h4>
+                        <small class="text-uppercase">Guided Daily Practices</small>
+                    </div>
+                    <div class="p-5 pt-0">
+                        <h1 class="display-5 mb-3">
+                            <small class="align-top" style="font-size: 22px; line-height: 45px;">$</small>399<small
+                                class="align-bottom" style="font-size: 16px; line-height: 40px;">/ Shared</small>
+                        </h1>
+                        <div class="d-flex justify-content-between mb-3"><span>Accommodation:</span><span>Twin Shared / Private</span></div>
+                        <div class="d-flex justify-content-between mb-3"><span>Activities:</span><span>Daily Yoga Sessions, Temple Visit, <br>Hiking Camping, Nature Walk</span></div>
+                        <div class="d-flex justify-content-between mb-3"><span>Offerings:</span><span>Daily 3 Times Meals & Tea<br>Airport Pickup & Drop Off</span></div>
+						<div class="d-flex justify-content-between mb-2"><span>Duration:</span><span>5 Days, 4 Nights Retreat</span></div>
+                        <a href="#" class="btn hover-fill btn-theme py-2 px-4 mt-4">Contact Us</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 wow slideInUp" data-wow-delay="0.9s">
+                <div class="bg-light rounded">
+                    <div class="border-bottom py-4 px-5 mb-4">
+                        <h4 class="text-theme mb-1">Hiking & Camping</h4>
+                        <small class="text-uppercase">Outdoor Adventures</small>
+                    </div>
+                    <div class="p-5 pt-0">
+                        <h1 class="display-5 mb-3">
+                            <small class="align-top" style="font-size: 22px; line-height: 45px;">$</small>499<small
+                                class="align-bottom" style="font-size: 16px; line-height: 40px;">/ Shared</small>
+                        </h1>
+                        <div class="d-flex justify-content-between mb-3"><span>Accommodation:</span><span>Twin Shared / Private</span></div>
+                        <div class="d-flex justify-content-between mb-3"><span>Activities:</span><span>Yoga Sessions, Camping</span></div>
+						<div class="d-flex justify-content-between mb-3"><span>Offerings:</span><span>Daily 3 Times Meals & Tea<br>Airport Pickup & Drop Off</span></div>
+                        <div class="d-flex justify-content-between mb-2"><span>Duration:</span><span>5 Days, 4 Nights Retreat</span></div>
+                        <a href="#" class="btn hover-fill btn-theme py-2 px-4 mt-4">Contact Us</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
+
 		<!-- Gallery Section -->
 		<div class="container-fluid py-5 mb-5 py-5 gallery wow fadeInUp" data-wow-delay="0.1s">
 			<div class="py-5">
@@ -500,76 +573,6 @@
 			</div>
 		</div>
 		 -->
-	
-		<!-- Plan Section  
-		<div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
-			<div class="container py-5">
-				<div class="section-title text-center position-relative pb-3 mb-5 mx-auto" style="max-width: 600px;">
-					<h5 class="fw-bold text-theme text-uppercase">Pricing Plans</h5>
-					<h1 class="mb-0">We are Offering Competitive Prices for Our Clients</h1>
-				</div>
-				<div class="row g-0">
-					<div class="col-lg-4 wow slideInUp" data-wow-delay="0.6s">
-						<div class="bg-light rounded">
-							<div class="border-bottom py-4 px-5 mb-4">
-								<h4 class="text-theme mb-1">Basic Plan</h4>
-								<small class="text-uppercase">For Small Size Business</small>
-							</div>
-							<div class="p-5 pt-0">
-								<h1 class="display-5 mb-3">
-									<small class="align-top" style="font-size: 22px; line-height: 45px;">$</small>49.00<small
-										class="align-bottom" style="font-size: 16px; line-height: 40px;">/ Month</small>
-								</h1>
-								<div class="d-flex justify-content-between mb-3"><span>HTML5 & CSS3</span><i class="fa fa-check text-theme pt-1"></i></div>
-								<div class="d-flex justify-content-between mb-3"><span>Bootstrap v5</span><i class="fa fa-check text-theme pt-1"></i></div>
-								<div class="d-flex justify-content-between mb-3"><span>Responsive Layout</span><i class="fa fa-times text-danger pt-1"></i></div>
-								<div class="d-flex justify-content-between mb-2"><span>Cross-browser Support</span><i class="fa fa-times text-danger pt-1"></i></div>
-								<a href="" class="btn hover-fill btn-theme py-2 px-4 mt-4">Order Now</a>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4 wow slideInUp" data-wow-delay="0.3s">
-						<div class="bg-white rounded shadow position-relative" style="z-index: 1;">
-							<div class="border-bottom py-4 px-5 mb-4">
-								<h4 class="text-theme mb-1">Standard Plan</h4>
-								<small class="text-uppercase">For Medium Size Business</small>
-							</div>
-							<div class="p-5 pt-0">
-								<h1 class="display-5 mb-3">
-									<small class="align-top" style="font-size: 22px; line-height: 45px;">$</small>99.00<small
-										class="align-bottom" style="font-size: 16px; line-height: 40px;">/ Month</small>
-								</h1>
-								<div class="d-flex justify-content-between mb-3"><span>HTML5 & CSS3</span><i class="fa fa-check text-theme pt-1"></i></div>
-								<div class="d-flex justify-content-between mb-3"><span>Bootstrap v5</span><i class="fa fa-check text-theme pt-1"></i></div>
-								<div class="d-flex justify-content-between mb-3"><span>Responsive Layout</span><i class="fa fa-check text-theme pt-1"></i></div>
-								<div class="d-flex justify-content-between mb-2"><span>Cross-browser Support</span><i class="fa fa-times text-danger pt-1"></i></div>
-								<a href="" class="btn hover-fill btn-theme py-2 px-4 mt-4">Order Now</a>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4 wow slideInUp" data-wow-delay="0.9s">
-						<div class="bg-light rounded">
-							<div class="border-bottom py-4 px-5 mb-4">
-								<h4 class="text-theme mb-1">Advanced Plan</h4>
-								<small class="text-uppercase">For Large Size Business</small>
-							</div>
-							<div class="p-5 pt-0">
-								<h1 class="display-5 mb-3">
-									<small class="align-top" style="font-size: 22px; line-height: 45px;">$</small>149.00<small
-										class="align-bottom" style="font-size: 16px; line-height: 40px;">/ Month</small>
-								</h1>
-								<div class="d-flex justify-content-between mb-3"><span>HTML5 & CSS3</span><i class="fa fa-check text-theme pt-1"></i></div>
-								<div class="d-flex justify-content-between mb-3"><span>Bootstrap v5</span><i class="fa fa-check text-theme pt-1"></i></div>
-								<div class="d-flex justify-content-between mb-3"><span>Responsive Layout</span><i class="fa fa-check text-theme pt-1"></i></div>
-								<div class="d-flex justify-content-between mb-2"><span>Cross-browser Support</span><i class="fa fa-check text-theme pt-1"></i></div>
-								<a href="" class="btn hover-fill btn-theme py-2 px-4 mt-4">Order Now</a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		-->
 	
 		<!-- Quote Section 
 		<div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
